Add popover and relative portal

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,5 +1,11 @@
 :root {
     --grid-unit: 8;
+    --screen-medium: 1600px;
+    --tablet-max-width: 1224px;
+    --mobile-max-width: 767px;
 }
 
 @grid-unit: 8;
+@screen-medium: 1600px;
+@tablet-max-width: 1224px;
+@mobile-max-width: 767px;
