Removed padding from top and bottom

--- a/src/components/general/Checkbox/styles.less
+++ b/src/components/general/Checkbox/styles.less
@@ -6,7 +6,8 @@
   --checkbox-width: calc(var(--grid-unit) * 2px);
 
   height: calc(var(--grid-unit) * 6px);
-  padding: calc((var(--grid-unit) * 2px) - 3px);
+  padding: 0 calc((var(--grid-unit) * 2px) - 3px) 0
+    calc((var(--grid-unit) * 2px) - 3px);
   box-sizing: border-box;
   display: flex;
   justify-content: center;
