--- a/src/components/general/Button/styles/index.less
+++ b/src/components/general/Button/styles/index.less
@@ -37,16 +37,9 @@
         vertical-align: middle;
         overflow: hidden;
 
-        label{
+        label {
             cursor: pointer;
         }
-    }
-
-    .icon{
-        text-align: center;
-        position: absolute;
-        top: 0;
-        left: 0;
     }
 
     &.block {
@@ -57,6 +50,7 @@
             display: block;
         }
     }
+
     &.flex {
         display: flex;
         width: calc(100% + (var(--grid-unit) * 1px));
@@ -68,8 +62,8 @@
 
     /* Variants */
     &.contained {
-        .variant-contained(primary, @color-primary, @color-primary-text, @color-primary-alt1, @color-primary-pressed, @color-accent3, @color-primary);
-        .variant-contained(signal, @color-signal, @color-signal-text, @color-signal-alt1, @color-signal-alt3, @color-signal-text, @color-signal);
+        .variant-contained(primary, @color-primary, @color-primary-text, @color-primary-alt1, @color-primary-pressed);
+        .variant-contained(signal, @color-signal, @color-signal-text, @color-signal-alt1, @color-signal-alt3);
 
         &[disabled] {
             .button-disabled();
@@ -77,8 +71,8 @@
     }
 
     &.outlined {
-        .variant-outlined(primary, #243746, @color-primary, @color-primary-pressed, @color-accent3, @color-primary);
-        .variant-outlined(signal, #243746, @color-signal, @color-signal-alt3,  @color-signal-text, #243746);
+        .variant-outlined(primary, #243746, @color-primary, @color-primary-pressed);
+        .variant-outlined(signal, #243746, @color-signal, @color-signal-alt3);
 
         &[disabled] {
             .button-disabled();
@@ -86,8 +80,8 @@
     }
 
     &.frameless {
-        .variant-frameless(primary, @color-primary, @color-accent2, @color-primary-pressed, @color-accent3, @color-primary);
-        .variant-frameless(signal, @color-signal, @color-accent1, @color-signal-alt3, @color-signal, @color-signal-text);
+        .variant-frameless(primary, @color-primary, @color-accent2, @color-primary-pressed);
+        .variant-frameless(signal, @color-signal, @color-accent1, @color-signal-alt3);
 
         &[disabled] {
             .button-disabled-frameless() !important;
