Add more tests and stuff

--- a/src/components/general/Popover/styles.less
+++ b/src/components/general/Popover/styles.less
@@ -50,6 +50,8 @@
         box-shadow: 0 0 4px rgba(0, 0, 0, .1), 0 4px 4px rgba(0, 0, 0, .05);
         display: flex;
         max-height: 100%;
+        box-sizing: border-box;
+        padding: calc(var(--grid-unit) * 1px)
     }
 
     .arrow {
