Added Tabs and changed color for hover to frameless button

--- a/src/components/general/Button/styles/index.less
+++ b/src/components/general/Button/styles/index.less
@@ -80,7 +80,7 @@
     }
 
     &.frameless {
-        .variant-frameless(primary, @color-primary, @color-accent2, @color-primary-pressed);
+        .variant-frameless(primary, @color-primary,  #004E55, @color-primary-pressed);
         .variant-frameless(signal, @color-signal, @color-accent1, @color-signal-alt3);
 
         &[disabled] {
