--- a/src/components/general/Button/styles/variants.less
+++ b/src/components/general/Button/styles/variants.less
@@ -8,7 +8,7 @@
         }
 
         100% {
-            box-shadow: 0 0 0 calc(var(--click-area) * 2px) fadeout(@color, 100%);
+            box-shadow: 0 0 0 calc(var(--click-area) * 2px) @color;
         }
     }
 }
@@ -52,32 +52,27 @@
     }
 }
 
-.variant-outlined(@name, @color, @hover-color, @pressed-color) {
+.variant-outlined(@name, @background-color, @color, @hover-color) {
     &.@{name} {
         transition: background-color .2s;
 
         .button {
-            background-color: white;
+            background-color:  @background-color;
             color: @color;
             border-color: @color;
         }
 
         &:hover {
             .button {
-                color: @hover-color;
-                border-color: @hover-color;
+                background-color: @hover-color;
             }
         }
-
-        &:active {
-            background-color: @pressed-color;
-
+        &:active{
+            background-color: @background-color;
             .button {
-                color: @hover-color;
-                border-color: @color;
+                background-color: @background-color;
             }
         }
-
         &.mouseHasBeenDown {
             @animation-name: ~"blop-@{name}";
             .button {
@@ -87,7 +82,7 @@
             }
         }
 
-        .blop-animation(@name, @pressed-color);
+        .blop-animation(@name,@hover-color);
     }
 }
 
@@ -104,6 +99,8 @@
         &:hover {
             .button {
                 color: @hover-color;
+                background-color: @pressed-color;
+
             }
         }
 
@@ -111,7 +108,6 @@
             background-color: @pressed-color;
 
             .button {
-                color: @hover-color;
                 border-color: transparent !important;
             }
         }
@@ -136,20 +132,20 @@
     }
 }
 
-.button-disabled() {
-    cursor: default;
+.button-disabled(@background-color, @border-color, @text-color) {
+    cursor: not-allowed;
 
     .button {
-        background-color: #E6E6E6 !important;
-        border-color: #B8B8B8 !important;
-        color: #A3A3A3 !important;
+        background-color: @background-color !important;
+        border-color: @border-color !important;
+        color: @text-color!important;
     }
 
     &:hover {
         .button {
-            background-color: #E6E6E6 !important;
-            border-color: #B8B8B8 !important;
-            color: #A3A3A3 !important;
+            background-color: @background-color !important;
+            border-color: @border-color !important;
+            color: @text-color !important;
         }
     }
 
@@ -157,35 +153,9 @@
         background: none !important;
 
         .button {
-            background-color: #E6E6E6 !important;
-            border-color: #B8B8B8 !important;
-            color: #A3A3A3 !important;
-        }
-    }
-}
-
-.button-disabled-frameless() {
-    cursor: default;
-
-    .button {
-        color: #E6E6E6 !important;
-    }
-
-    &:hover {
-        .button {
-            background: none !important;
-            border-color: none !important;
-            color: #E6E6E6 !important;
-        }
-    }
-
-    &:active {
-        background: none !important;
-
-        .button {
-            background: none !important;
-            border-color: none !important;
-            color: #E6E6E6 !important;
+            background-color: @background-color !important;
+            border-color: @border-color !important;
+            color: @text-color !important;
         }
     }
 }
