--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -8,7 +8,7 @@
     height: .grid-unit(10px)[];
     align-items: center;
     background: white;
-    border-bottom: 2px solid #E3E5E7;
+    border-bottom: 2px solid var(--color-black-alt4);
 }
 
 .fusionTitleContainer {
