outline for focus uses token colors and remove tslint ruleset

--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -47,7 +47,7 @@
             }
 
             &:focus{
-                outline: 1px dashed rgba(0, 0, 0, .5);
+                outline: 1px dashed var(--color-black-alt3);
             }
 
             &:hover {
