--- a/src/components/general/Button/styles/variables.less
+++ b/src/components/general/Button/styles/variables.less
@@ -1,4 +1,4 @@
 .container {
-    --click-area: calc(var(--grid-unit) / 4);
+    --click-area: calc(var(--grid-unit) * 0.75);
     --corner-radius: 4px;
 }
