--- a/src/components/general/Button/styles/sizes.less
+++ b/src/components/general/Button/styles/sizes.less
@@ -1,7 +1,7 @@
 @import "./variables.less";
 
 .button-size(@height-multiplier, @padding-multiplier, @font-size) {
-    padding: calc(var(--click-area) * 1px);
+    padding: calc(var(--click-area) * 1px) 0 calc(var(--click-area) * 1px) 0;
     margin: calc(var(--click-area) * -1px);
     height: calc((var(--grid-unit) * @height-multiplier) + (var(--click-area) * 2px));
 
