Add root and content + rewrite all to typescript :poop:

--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -1,6 +1,7 @@
 @import "~styles/mixins.less";
 
 .container {
+    grid-area: header;
     display: grid;
     grid-template-columns: .grid-unit(15px)[] auto max-content;
     grid-template-rows: 100%;
@@ -10,14 +11,19 @@
     align-items: center;
     background: white;
     border-bottom: 2px solid var(--color-black-alt4);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 .fusionTitleContainer {
-    grid-area: "logo";
+    grid-area: logo;
 }
 
 .fusionTitleContainer,
 .fusionTitleContainer:visited,
+.fusionTitleContainer:hover,
+.fusionTitleContainer:active,
 .fusionLogo,
 .fusionTitle {
     margin: 0;
@@ -27,7 +33,8 @@
     align-items: center;
     text-decoration: none;
     font-size: 15px;
-    color: black;
+    font-weight: 500;
+    color: var(--color-primary-accent);
 }
 
 .fusionLogo {
@@ -35,9 +42,9 @@
 }
 
 .contextContainer {
-    flex-grow: 2;
+    grid-area: context;
 }
 
 .tempCurrentUser {
-    grid-area: "user";
+    grid-area: user;
 }
