Refactor story and added focus

--- a/src/components/general/Tabs/__stories__/styles.less
+++ b/src/components/general/Tabs/__stories__/styles.less
@@ -1,9 +1,9 @@
 @import "~styles/variables.less";
 
 .content {
-    padding: calc(var(--grid-unit)* 3px) calc(var(--grid-unit)* 20px) 0 calc(var(--grid-unit)* 20px);
+    padding: calc(var(--grid-unit)* 3px);
 
-    .chapter {
+    .item {
         padding-top: calc(var(--grid-unit)*2px);
     }
 }
