--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -9,7 +9,7 @@
         border-bottom: 1px solid var(--color-black-alt4);
         overflow-x: auto;
         scroll-behavior: smooth;
-        
+
         &::-webkit-scrollbar { 
             display: none; 
         }
@@ -21,14 +21,13 @@
             align-items: center;
             justify-content: center;
             text-decoration: none;
-            background: none;
+            background: none;   
             color: inherit;
             border: none;
             font: inherit;
             min-width:0;
             overflow: hidden;
-            padding-top: calc(var(--grid-unit)* 0.5px);
-            padding-bottom: calc(var(--grid-unit)* 0.5px);
+            margin-top: calc(var(--grid-unit)* 0.5px);
             display: flex;
             align-items: center;
             justify-content: center;
