--- a/src/components/general/ErrorMessage/styles.less
+++ b/src/components/general/ErrorMessage/styles.less
@@ -9,7 +9,7 @@
 
     .messageContainer {
         position: relative;
-        top: 0; left: 0; bottom: 0; right: 0;
+        top: 20%; left: 0; bottom: 0; right: 0;
         display: flex;
         align-content: center;
         align-items: center;
