--- a/src/components/general/ErrorMessage/styles.less
+++ b/src/components/general/ErrorMessage/styles.less
@@ -5,7 +5,6 @@
 .container {
     position: relative;
     width: 100%;
-    height: 100%;
 
     .messageContainer {
         position: relative;
@@ -32,7 +31,10 @@
         }
         &.small{
             margin-top: 0;
-            
+            position: relative;
+            top: 50%;
+            transform: translateY(-50%);
+                    
             .title{
                 padding-top: calc(var(--grid-unit)* 5px);
                 font-size: 16px;
