--- a/src/components/general/ErrorMessage/styles.less
+++ b/src/components/general/ErrorMessage/styles.less
@@ -5,10 +5,11 @@
 .container {
     position: relative;
     width: 100%;
+    height: 100%;
 
     .messageContainer {
         position: relative;
-        top: 0%; left: 0; bottom: 0; right: 0;
+        top: 0; left: 0; bottom: 0; right: 0;
         display: flex;
         align-content: center;
         align-items: center;
