--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -4,3 +4,8 @@
     --tablet-max-width: 1224px;
     --mobile-max-width: 767px;
 }
+
+@mobile-max-width: 767px;
+@grid-unit: 8;
+@screen-medium: 1600px;
+@tablet-max-width: 1224px;
