--- a/src/components/feedback/Snackbar/styles.less
+++ b/src/components/feedback/Snackbar/styles.less
@@ -1,9 +1,11 @@
 @import '~styles/mixins.less';
+@import '~styles/variables.less';
 
 .container {
+    --width-multiplier: 75px;
     background-color: var(--color-black-alt1);
     height: .grid-unit(6px)[];
-    width: .grid-unit(43px)[];
+    width: calc(var(--width-multiplier)* var(--grid-unit));
     border-radius: 4px;
     display: flex;
     align-items: center;
@@ -11,6 +13,10 @@
     justify-content: space-between;
     transition: opacity .2s;
     opacity: 0;
+
+    @media (max-width: @mobile-max-width) {
+        --width-multiplier: 38px;
+    }
 
     &.isVisible{
         opacity: 1;
@@ -21,11 +27,43 @@
         padding: .grid-unit(2px)[];
         font-size: 12px;
         line-height: .grid-unit(2px)[];
+        white-space: nowrap; 
+        overflow: hidden;
+        text-overflow: ellipsis;
 
+        @media (max-width: @mobile-max-width) {
+            white-space: normal;
+            padding: 0 .grid-unit(2px)[];;
+            max-height: .grid-unit(4px)[];
+        }
     }
     .cancelButton {
         padding: 0 .grid-unit(2px)[];
         display: flex;
+        height: 100%;
+        align-items: center;
+
+        button {
+            box-sizing: border-box;
+            width: 100%;
+            background: none;
+            outline: none;
+            border: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            height: calc(var(--grid-unit) * 4.5px);
+            border-radius: 4px;
+
+            span {
+                color: var(--color-primary-alt1);
+            }
+
+            &:hover {
+                background-color: var(--color-black-alt2);
+            }
+        }
     }
 
     &.left {
