Added hover color and removed story

--- a/src/components/feedback/Snackbar/styles.less
+++ b/src/components/feedback/Snackbar/styles.less
@@ -20,7 +20,7 @@
 
     &.isVisible{
         opacity: 1;
-    } 
+    }
 
     .message{
         color: var(--color-white);
@@ -33,7 +33,7 @@
 
         @media (max-width: @mobile-max-width) {
             white-space: normal;
-            padding: 0 .grid-unit(2px)[];;
+            padding: 0 .grid-unit(2px)[];
             max-height: .grid-unit(4px)[];
         }
     }
@@ -61,7 +61,8 @@
             }
 
             &:hover {
-                background-color: var(--color-black-alt2);
+                background-color: rgba(255, 255, 255, 0.1);
+
             }
         }
     }
