--- a/src/components/feedback/Dialog/styles.less
+++ b/src/components/feedback/Dialog/styles.less
@@ -4,7 +4,8 @@
     padding: .grid-unit(2px)[] 0 .grid-unit(1px)[] 0;
     border: 1px solid var(--color-black-alt4);
     border-radius: 4px;
-    width: .grid-unit(35px)[];
+    min-width: .grid-unit(35px)[];
+    max-width: .grid-unit(70px)[];
 
     .dialogTitle {
         margin: 0;
