--- a/src/components/feedback/Dialog/styles.less
+++ b/src/components/feedback/Dialog/styles.less
@@ -4,8 +4,7 @@
     padding: .grid-unit(2px)[] 0 .grid-unit(1px)[] 0;
     border: 1px solid var(--color-black-alt4);
     border-radius: 4px;
-    min-width: .grid-unit(35px)[];
-    max-width: .grid-unit(70px)[];
+    width: .grid-unit(70px)[];
 
     .dialogTitle {
         margin: 0;
@@ -17,8 +16,7 @@
         padding: .grid-unit(1px)[] .grid-unit(3px)[] .grid-unit(2px)[] .grid-unit(3px)[];
         line-height: .grid-unit(3px)[];
         font-size: 16px;
-        min-height: .grid-unit(10px)[];
-        max-height: .grid-unit(13px)[];
+        max-height: .grid-unit(9px)[];
         overflow-y: auto;
 
         &.scrollable {
