fixed dialog actions height

--- a/src/components/feedback/Dialog/styles.less
+++ b/src/components/feedback/Dialog/styles.less
@@ -25,7 +25,7 @@
         }   
     }
     .dialogActions{
-        padding: .grid-unit(1px)[] .grid-unit(3px)[] 0 .grid-unit(3px)[];
+        padding: .grid-unit(2px)[] .grid-unit(3px)[] .grid-unit(1px)[] .grid-unit(3px)[];
         display: flex;
         align-items: center;
         justify-content: flex-end;
