Update usage of context query and use popover

--- a/src/components/general/Menu/styles.less
+++ b/src/components/general/Menu/styles.less
@@ -10,6 +10,10 @@
         margin: 0;
         padding: calc(var(--grid-unit) * 1px) 0;
 
+        h5 {
+            margin: 0 calc(var(--grid-unit) * 1px);
+        }
+
         button {
             box-sizing: border-box;
             width: 100%;
@@ -21,6 +25,7 @@
             align-items: center;
             justify-content: center;
             padding: 0;
+            cursor: pointer;
 
             span {
                 height: calc(var(--grid-unit) * 5.5px);
