--- a/src/components/core/Root/styles.less
+++ b/src/components/core/Root/styles.less
@@ -6,14 +6,39 @@
     width: 100%;
     height: 100%;
     color: var(--color-primary-accent);
-    position: relative;
-    display: grid;
-    grid-template-rows: max-content auto;
-    grid-template-areas:
-        "header"
-        "content";
 
     a {
         color: var(--color-primary);
+    }
+
+    h1, h2, h3, h4, h5 {
+        font-weight: normal;
+        margin: 0;
+    }
+
+    h1 {
+        font-size: 32px;
+        line-height: calc(var(--grid-unit) * 6px);
+    }
+
+    h2 {
+        font-size: 28px;
+        line-height: calc(var(--grid-unit) * 5px);
+    }
+
+    h3 {
+        font-size: 24px;
+        line-height: calc(var(--grid-unit) * 5px);
+    }
+
+    h4 {
+        font-size: 20px;
+        line-height: calc(var(--grid-unit) * 4px);
+    }
+
+    h5 {
+        font-size: 16px;
+        line-height: calc(var(--grid-unit) * 3px);
+        font-weight: 500;
     }
 }
